--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,38 +1,49 @@
-<h1>Burgers!</h1>
+<h1>Welcome to Burger <i>Queue</i>n!</h1>
+<h2 class="subtitle"><i>Try all the burgers!</i></h2>
 
-<h2>Burgers that are not eaten!</h2>
+<div class="container">
+  <div class="col-1 col">
+  <h2>Add a Burger!</h2>
+  <form class="create-form">
 
-<ul>
-  {{#each burgers}}
+    <div class="form-group">
+      <h4><label for="bg">Burger Name:</label></h4>
+      <input type="text" id="bg" name="name">
+    </div>
+{{!-- 
+    <div class="form-group">
+      <h4><label for="eaten">Eaten?</label></h4>
+      <h4><input type="radio" name="eaten" value="1" checked> Yes!</h4>
+      <h4><input type="radio" name="eaten" value="0"> No!</h4>
+    </div> --}}
+
+    <button type="submit">Add Burger</button>
+  </form>
+</div>
+
+<div class="col-2 col">
+  <h2>Burgers I want to try!</h2>
+
+  <ul>
+    {{#each burgers}}
     {{#unless eaten}}
-      {{> burgers/burger-block eat=true}}
+    {{> burgers/burger-block eat=true}}
     {{/unless}}
-  {{/each}}
-</ul>
+    {{/each}}
+  </ul>
+</div>
 
-<h2>Burgers that are eaten!</h2>
+<div class="col-3 col">
+  <h2>Burgers I've eaten!</h2>
 
-<ul>
-  {{#each burgers}}
+  <ul>
+    {{#each burgers}}
     {{#if eaten}}
-      {{> burgers/burger-block eat=false}}
+    {{> burgers/burger-block eat=false}}
     {{/if}}
-  {{/each}}
-</ul>
+    {{/each}}
+  </ul>
+  
+</div>
+</div>
 
-<h2>Add a Burger</h2>
-<form class="create-form">
-
-  <div class="form-group">
-    <label for="bg">Burger Name:</label>
-    <input type="text" id="bg" name="name">
-  </div>
-
-  <div class="form-group">
-    <label for="eaten">Eaten?</label><br>
-    <input type="radio" name="eaten" value="1" checked> Yes!<br>
-    <input type="radio" name="eaten" value="0"> No!
-  </div>
-
-  <button type="submit">Add Burger</button>
-</form>
